# freecell

./: NEWS  README.md  configure  configure.ac
doc/: freecell.6
src/: freecell.c
